[gd_scene load_steps=18 format=2]

[ext_resource path="res://monstro_1.gd" type="Script" id=1]
[ext_resource path="res://imagens/Monster 3 comdetalhe(1).png" type="Texture" id=2]
[ext_resource path="res://imagens/huhuhuhhuhu2.png" type="Texture" id=3]
[ext_resource path="res://imagens/sprite 1(1).png" type="Texture" id=4]
[ext_resource path="res://imagens/Monster atordoado(1).png" type="Texture" id=5]
[ext_resource path="res://imagens/huhuhuhhuhu3-2.png" type="Texture" id=6]
[ext_resource path="res://imagens/huhuhuhhuhu.png" type="Texture" id=7]
[ext_resource path="res://imagens/monter ataque.png" type="Texture" id=8]
[ext_resource path="res://imagens/monter ataque2.png" type="Texture" id=9]
[ext_resource path="res://sounds/Sound_monster_timing_purple.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/Sound_timing_monster.wav" type="AudioStream" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 384, 192 )

[sub_resource type="Animation" id=3]
resource_name = "ataque"
length = 0.85
tracks/0/type = "value"
tracks/0/path = NodePath("area_ataque/hitbox_ataque:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 0.85 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -320, -128 ), Vector2( -320, 64 ), Vector2( -320, -128 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "morre"
length = 0.2
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "monstro_morre"
} ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 288, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 96, 128 )

[node name="monstro_1" type="StaticBody2D"]
position = Vector2( 288, 288 )
collision_layer = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="monstro" type="AnimatedSprite" parent="."]
position = Vector2( -32, -64 )
scale = Vector2( 5, 5 )
frames = SubResource( 1 )

[node name="area_inicio_combate" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/ataque = SubResource( 3 )
anims/morre = SubResource( 4 )

[node name="area_ataque" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="hitbox_ataque" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( -320, 64 )
shape = SubResource( 5 )

[node name="hitbox_recebe" type="CollisionShape2D" parent="area_ataque"]
position = Vector2( -224, 64 )
shape = SubResource( 6 )
disabled = true

[node name="atordoado" type="Label" parent="."]
margin_left = -352.0
margin_top = -480.0
margin_right = -240.0
margin_bottom = -466.0
rect_scale = Vector2( 6.24258, 6.24258 )
text = "Pressione espaco"

[node name="roxo_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -18.175

[node name="vermelho_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = -18.175
